[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/scenes/game/game.gd" type="Script" id=1]
[ext_resource path="res://src/objects/grid/grid.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/textures/buttons.svg" type="Texture" id=3]
[ext_resource path="res://src/ui/theme.tres" type="Theme" id=4]
[ext_resource path="res://src/ui/components/score_label/score_label.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/components/pause_button/pause_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/resources/shortcuts/left.tres" type="ShortCut" id=7]
[ext_resource path="res://src/resources/shortcuts/right.tres" type="ShortCut" id=8]
[ext_resource path="res://src/resources/shortcuts/enter.tres" type="ShortCut" id=9]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 40, 0, 40, 32 )

[node name="Game" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="Start" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true
__meta__ = {
"_editor_description_": "Waits a brief moment before starting the game."
}

[node name="GameOver" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
__meta__ = {
"_editor_description_": "Adds a little interval before the game cuts to the \"Game Over\" scene."
}

[node name="Contents" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 254.0
margin_bottom = 286.0

[node name="Points" parent="Contents" instance=ExtResource( 5 )]
margin_right = 252.0
margin_bottom = 16.0

[node name="Frame" type="PanelContainer" parent="Contents"]
margin_left = 5.0
margin_top = 21.0
margin_right = 247.0
margin_bottom = 247.0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_type_variation = "FramePanelContainer"

[node name="WorldContainer" type="ViewportContainer" parent="Contents/Frame"]
margin_left = 1.0
margin_top = 1.0
margin_right = 241.0
margin_bottom = 225.0

[node name="World" type="Viewport" parent="Contents/Frame/WorldContainer"]
size = Vector2( 240, 224 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Grid" parent="Contents/Frame/WorldContainer/World" instance=ExtResource( 2 )]
unique_name_in_owner = true
visible = false
grid_height = 14
grid_width = 15

[node name="StartOverlay" type="Label" parent="Contents/Frame"]
unique_name_in_owner = true
margin_left = 1.0
margin_top = 105.0
margin_right = 241.0
margin_bottom = 121.0
text = "GET READY"
align = 1

[node name="PauseOverlay" type="Label" parent="Contents/Frame"]
unique_name_in_owner = true
visible = false
margin_left = 1.0
margin_top = 106.0
margin_right = 241.0
margin_bottom = 120.0
text = "GAME PAUSED"
align = 1

[node name="Buttons" type="HBoxContainer" parent="Contents"]
margin_top = 252.0
margin_right = 252.0
margin_bottom = 284.0

[node name="Pause" parent="Contents/Buttons" instance=ExtResource( 6 )]
disabled = true
shortcut = ExtResource( 9 )

[node name="TurnLeft" type="Button" parent="Contents/Buttons"]
margin_left = 172.0
margin_right = 212.0
margin_bottom = 32.0
focus_mode = 0
shortcut_in_tooltip = false
action_mode = 0
shortcut = ExtResource( 7 )
icon = SubResource( 3 )

[node name="TurnRight" type="Button" parent="Contents/Buttons"]
margin_left = 212.0
margin_right = 252.0
margin_bottom = 32.0
focus_mode = 0
shortcut_in_tooltip = false
action_mode = 0
shortcut = ExtResource( 8 )
icon = SubResource( 5 )

[connection signal="timeout" from="Start" to="." method="_on_start_timeout"]
[connection signal="timeout" from="GameOver" to="." method="_on_game_over_timeout"]
[connection signal="food_eaten" from="Contents/Frame/WorldContainer/World/Grid" to="." method="_on_grid_food_eaten"]
[connection signal="game_over" from="Contents/Frame/WorldContainer/World/Grid" to="." method="_on_grid_game_over"]
[connection signal="toggled" from="Contents/Buttons/Pause" to="." method="_on_pause_toggled"]
[connection signal="pressed" from="Contents/Buttons/TurnLeft" to="." method="_on_turn_left_pressed"]
[connection signal="pressed" from="Contents/Buttons/TurnRight" to="." method="_on_turn_right_pressed"]
